<resources>
    <string name="app_name">Android Background Tasks</string>
    <string name="imgvw_icon_desc">Option icon.</string>
    <string name="counter_start_value">0</string>
    <string name="start">Iniciar</string>
    <string name="summary">Sumário da execução:</string>
    <string name="counter_size_message">Vou contar até %1$s.</string>
    <string name="detalhes">Detalhes</string>
    <string name="counter_task_size">- Meu objetivo é contar até: %s</string>
    <string name="counter_task_tag">- A TAG da AsyncTask é: %s</string>
    <string name="execucao_serial">Execução serial</string>
    <string name="execucao_serial_sim">SIM</string>
    <string name="execucao_serial_nao">NÃO</string>
    <string name="sobre">Olá! Minha tarefa será contar até: %s</string>
</resources>
