<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_counter_async_task"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="3dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <ProgressBar
            android:id="@+id/prgrssbr_counter_task_progress_animation"
            style="?android:attr/progressBarStyle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.687" />

        <TextView
            android:id="@+id/txtvw_counter_task_current_value"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/counter_start_value"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/prgrssbr_counter_task_progress_animation"
            app:layout_constraintEnd_toEndOf="@+id/prgrssbr_counter_task_progress_animation"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/prgrssbr_counter_task_progress_animation"
            app:layout_constraintTop_toTopOf="@+id/prgrssbr_counter_task_progress_animation"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/txtvw_counter_task_details"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/detalhes"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/prgrssbr_counter_task_progress_animation"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtvw_counter_task_task_tag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:padding="2dp"
            android:text="@string/counter_task_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtvw_counter_task_details"
            app:layout_constraintTop_toBottomOf="@+id/txtvw_counter_task_details" />

        <TextView
            android:id="@+id/txtvw_counter_task_task_size"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:padding="2dp"
            android:text="@string/counter_task_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtvw_counter_task_task_tag"
            app:layout_constraintTop_toBottomOf="@+id/txtvw_counter_task_task_tag" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>